--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
     "react-router-dom": "^6.16.0",
     "uuid": "^9.0.1",
     "vite-plugin-svgr": "^4.0.0",
